api/tests/snapshots/groups_routes__get_groups__401_no_auth.snap
---
source: tests/groups_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Authorization header required"
  },
  "status": 401
}
