api/tests/snapshots/groups_routes__get_groups__empty.snap
---
source: tests/groups_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": [],
  "status": 200
}
